[gd_scene load_steps=3 format=3 uid="uid://dlhf1olqicv7"]

[ext_resource type="Texture2D" uid="uid://diedbb5qqa3le" path="res://Textures/Icons/Cube.svg" id="1_s60gs"]
[ext_resource type="Script" path="res://Windows/MainEditor/CodeEditor/Nodes/Special/LsCodeNode.gd" id="2_c7517"]

[node name="GraphNode" type="GraphNode"]
offset_right = 735.0
offset_bottom = 602.0
resizable = true
title = "Script Node"
slot/0/left_enabled = true
slot/0/left_type = 2
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 1
slot/0/right_color = Color(1, 0, 0, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(0, 0, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(0, 0.572549, 0, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(0, 0.572549, 0, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color(1, 1, 1, 1)
slot/5/left_icon = ExtResource("1_s60gs")
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color(1, 1, 1, 1)
slot/5/right_icon = ExtResource("1_s60gs")
slot/5/draw_stylebox = false
slot/6/left_enabled = false
slot/6/left_type = 0
slot/6/left_color = Color(1, 1, 1, 1)
slot/6/left_icon = null
slot/6/right_enabled = true
slot/6/right_type = 0
slot/6/right_color = Color(1, 0, 1, 1)
slot/6/right_icon = null
slot/6/draw_stylebox = true
slot/7/left_enabled = false
slot/7/left_type = 0
slot/7/left_color = Color(1, 1, 1, 1)
slot/7/left_icon = null
slot/7/right_enabled = false
slot/7/right_type = 0
slot/7/right_color = Color(1, 1, 1, 1)
slot/7/right_icon = null
slot/7/draw_stylebox = true
slot/8/left_enabled = false
slot/8/left_type = 0
slot/8/left_color = Color(1, 1, 1, 1)
slot/8/left_icon = null
slot/8/right_enabled = false
slot/8/right_type = 0
slot/8/right_color = Color(1, 1, 1, 1)
slot/8/right_icon = null
slot/8/draw_stylebox = true
slot/9/left_enabled = false
slot/9/left_type = 0
slot/9/left_color = Color(1, 1, 1, 1)
slot/9/left_icon = null
slot/9/right_enabled = false
slot/9/right_type = 0
slot/9/right_color = Color(1, 1, 1, 1)
slot/9/right_icon = null
slot/9/draw_stylebox = true
slot/10/left_enabled = false
slot/10/left_type = 0
slot/10/left_color = Color(1, 1, 1, 1)
slot/10/left_icon = null
slot/10/right_enabled = false
slot/10/right_type = 0
slot/10/right_color = Color(1, 1, 1, 1)
slot/10/right_icon = null
slot/10/draw_stylebox = true
slot/11/left_enabled = false
slot/11/left_type = 0
slot/11/left_color = Color(1, 1, 1, 1)
slot/11/left_icon = null
slot/11/right_enabled = false
slot/11/right_type = 0
slot/11/right_color = Color(1, 1, 1, 1)
slot/11/right_icon = null
slot/11/draw_stylebox = true
slot/12/left_enabled = false
slot/12/left_type = 0
slot/12/left_color = Color(1, 1, 1, 1)
slot/12/left_icon = null
slot/12/right_enabled = false
slot/12/right_type = 0
slot/12/right_color = Color(1, 1, 1, 1)
slot/12/right_icon = null
slot/12/draw_stylebox = true
slot/13/left_enabled = false
slot/13/left_type = 0
slot/13/left_color = Color(1, 1, 1, 1)
slot/13/left_icon = null
slot/13/right_enabled = false
slot/13/right_type = 0
slot/13/right_color = Color(1, 1, 1, 1)
slot/13/right_icon = null
slot/13/draw_stylebox = true
slot/14/left_enabled = false
slot/14/left_type = 0
slot/14/left_color = Color(1, 1, 1, 1)
slot/14/left_icon = null
slot/14/right_enabled = false
slot/14/right_type = 0
slot/14/right_color = Color(1, 0, 1, 1)
slot/14/right_icon = null
slot/14/draw_stylebox = true
slot/15/left_enabled = false
slot/15/left_type = 0
slot/15/left_color = Color(1, 1, 1, 1)
slot/15/left_icon = null
slot/15/right_enabled = false
slot/15/right_type = 0
slot/15/right_color = Color(1, 0, 1, 1)
slot/15/right_icon = ExtResource("1_s60gs")
slot/15/draw_stylebox = true
slot/16/left_enabled = false
slot/16/left_type = 0
slot/16/left_color = Color(1, 1, 1, 1)
slot/16/left_icon = null
slot/16/right_enabled = false
slot/16/right_type = 0
slot/16/right_color = Color(1, 1, 1, 1)
slot/16/right_icon = null
slot/16/draw_stylebox = true
script = ExtResource("2_c7517")

[node name="Label2" type="Label" parent="."]
layout_mode = 2
text = "Execute"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 2
text = "Script Name"
placeholder_text = "Variable Name "

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Mode :"

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 2
item_count = 2
selected = 1
popup/item_0/text = "All Settings"
popup/item_0/id = 0
popup/item_1/text = "Simple"
popup/item_1/id = 1

[node name="HSeparator" type="HSeparator" parent="."]
visible = false
layout_mode = 2

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 2
text = "Bake Code"

[node name="Button2" type="Button" parent="."]
visible = false
layout_mode = 2
text = "Reload Dependencies"

[node name="CheckButton" type="CheckButton" parent="."]
visible = false
layout_mode = 2
text = "Keep Variable Names"

[node name="CheckButton2" type="CheckButton" parent="."]
visible = false
layout_mode = 2
text = "Req Script Name"

[node name="CheckButton3" type="CheckButton" parent="."]
visible = false
layout_mode = 2
text = "Import Dependencies [FROM THIS PIN]"

[node name="CheckButton4" type="CheckButton" parent="."]
visible = false
layout_mode = 2
text = "Export Data [FROM THIS PIN]"

[node name="CheckButton5" type="CheckButton" parent="."]
visible = false
layout_mode = 2
text = "Refresh on runtime"

[node name="CheckButton6" type="CheckButton" parent="."]
visible = false
layout_mode = 2
text = "Publicate"

[node name="CheckButton7" type="CheckButton" parent="."]
visible = false
layout_mode = 2
text = "Access [ON: SCRIPT OFF: GAME]"

[node name="MenuButton" type="MenuButton" parent="."]
layout_mode = 2
text = "CP | Luminus Engine 4 [INHERIT]"
item_count = 1
popup/item_0/text = ""
popup/item_0/id = 0

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="CodeEdit" type="CodeEdit" parent="."]
layout_mode = 2
size_flags_vertical = 3
scroll_smooth = true
minimap_draw = true
caret_blink = true
highlight_current_line = true
draw_tabs = true
gutters_draw_bookmarks = true
gutters_draw_line_numbers = true
code_completion_enabled = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
